# AI-DocClassExt

./: .env.example  .gitignore  AzuriteConfig  COMMITS_LISTOS.md  README.md  TAREAS_PENDIENTES.md  azure-permissions-report.json  azure-pipelines-admin.yml  azure-pipelines-assetresolver.yml  azure-pipelines-bootstrap.yml  azure-pipelines-functions.yml  azure-pipelines.yml  build-output.txt  clean-and-test.ps1  docker-compose.yml  last-instance-id-notasimple14-classify.txt  last-instance-id-prod-validate.txt  last-statusuri-prod.txt  rebuild-and-test.ps1  smoke_crud_admin.ps1  smoke_e2e.ps1  smoke_e2e_v2.ps1  start-activo-enrichment.ps1  sync-with-remote.ps1  test-output.txt  test_result_aaii_specific.txt
.azure/: plan.md
.github/: copilot-instructions.md
docs/: 00_FASE1_PROGRESS_2026-06-02.md  01_ARQUITECTURA_SISTEMA.md  01_FASE1_UPDATE_2026-06-09.md  02_ANALISIS_FUNCIONAL.md  03_DISENO_TECNICO_DETALLADO.md  04_MANUAL_EXPLOTACION.md  05_MANUAL_USO_CONFIGURACION.md  06_PLAN_PRUEBAS.md  07_ROADMAP_PENDIENTES.md  08_CHECKLISTS_DESPLIEGUE.md  09_AUDITORIA_CONFIGURACION_2026-04-30.md  10_AUDITORIA_DOCUMENTAL_2026-04-30.md  11_INVENTARIO_WORKITEMS_2026-05-01.md  12_MIGRACION_PROMPTGPT_V1_4.md  12_PLAN_EJECUCION_CLASIFICACION_V1_APROBADO.md  13_GUION_PRESENTACION_CLASIFICACION_V1_4_SLIDES.md  13_PLAN_PIPELINE_CLASIFICACION_CONFIGURABLE_2026-05-21.md  14_ADO_BACKLOG_PIPELINE_CLASIFICACION_2026-05-21.md  15_API_DOCUMENTATION_V1_4.md  16_FASE3_SCOPE_STRATEGY.md  16_PLAN_EXPANSION_BATERIAS_E2E_ADO_2026-05-26.md  (+40 more)
src/ai-models/: pyproject.toml  requirements.txt
(+707 files in other folders)
