[tool.poetry]
name = "documentia-ai-models"
version = "0.1.0"
description = "Scripts de entrenamiento de modelos IA para DocumentIA MVP"
authors = ["Your Team"]

[tool.poetry.dependencies]
python = "^3.10"
azure-ai-formrecognizer = "^3.3.0"
azure-storage-blob = "^12.19.0"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
